k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eis
  labels:
    app.kubernetes.io/name: eis
    app.kubernetes.io/component: namespace
